--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
-<!-- 
+
 <router-outlet>
     
-</router-outlet> -->
+</router-outlet>
 
 <app-filter></app-filter>
+<app-categories></app-categories>
+
