--- a/src/app/might-like/might-like.component.html
+++ b/src/app/might-like/might-like.component.html
@@ -11,7 +11,7 @@
     
         <div class="flex">
             <div class="filter-title">
-                {{filtertitle}}
+                {{mighttitle}}
             </div>
     
             <div class="filter-icon">
