--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,12 @@
 <div class="grey-container">
     <div class="padding">
-        <div>
+        <div class="categories">
             <app-category-item [categories]="categoriesDetails"></app-category-item>
+        </div>
+        <div class="footer-list">
+            <div class="list">
+                <p class="list-one-title">{{listOneTitle}}</p>
+            </div>
         </div>
     </div>
 </div>
