--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,3 +5,10 @@
     padding-left: 10%;
     padding-right: 10%;
 }
+.list-one-title{
+font-size: 16px;
+color: #7E7E7E;
+}
+.grey-container{
+    direction: rtl;
+}
