--- a/src/app/close-destinations/close-destinations.component.css
+++ b/src/app/close-destinations/close-destinations.component.css
@@ -8,22 +8,31 @@
 }
 .image{
     width: 364px;
-    height: 99px;
+    height: 262px;
+    position: relative;
   
+  
+}
+.item{
+    
 }
 .image img{
     width: 100%;
+    height: 100%;
     border-radius: 30px;
 }
 .title-name{
     position: absolute;
     bottom: 0;
     right: 15px;
+    font-size: 26px;
+    color: white;
 }
-.title{
-    position: relative;
-    width: 364px;
-    height: 99px;
+ .title{
+
     font-size: 26px;
     
+} 
+.title-name{
+    position: absolute;
 }
