--- a/src/app/deals/deals.component.css
+++ b/src/app/deals/deals.component.css
@@ -1,14 +1,8 @@
-.red{
-    background-color: red;
+.img-container{
+    width: 460px;
+    height: 204px;
 }
-
-.width{
-    width: 25%;
-}
-.title {
-    font-size: 40px;
-}
-.cont{
-    padding-left: 10%;
-    padding-right: 10%;
+.img{
+    width: 100%;
+    height: 100%;
 }
