--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,47 @@ app-footer app-category-item .category-container{
 padding-left: 0 !important;
 padding-right: 0 !important;
 }
+app-deals .owl-item{
+    width: 460px;
+    height: 204px;
+   padding-left: 20px;
+   padding-right: 20px;
+}
+app-deals .owl-dots span{
+    /* width: 12px; */
+    /* height: 12px; */
+    font-size: 12px;
+    border: 2px solid #D9D9D9 !important;
+}
+
+app-deals .owl-dots.active span{
+    /* width: 12px; */
+    /* height: 12px; */
+    font-size: 12px;
+    border: 2px solid white !important;
+}
+
+@font-face {
+    font-family: medium;
+    src: url(assets/fonts/AvenirArabic-Medium.otf);
+  }
+
+  @font-face {
+    font-family: light;
+    src: url(assets/fonts/AvenirArabic-Light.otf);
+  }
+
+  @font-face {
+    font-family: heavy;
+    src: url(assets/fonts/AvenirArabic-Heavy.otf);
+  }
+
+  @font-face {
+    font-family: black;
+    src: url(assets/fonts/AvenirArabic-Black.otf);
+  }
+
+  @font-face {
+    font-family: book;
+    src: url(assets/fonts/AvenirArabic-Book.otf);
+  }
