--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -31,7 +31,7 @@
                 <p>{{card.currency}}</p>
             </div>
               <div>
-                <p class="muted" >{{card.duration}}</p>
+                <p class="muted modify-font" >{{card.duration}}</p>
               </div>
             
             
