--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -2,7 +2,9 @@
     <div class="just flex">
         <div class="flex">
             <div class="arrow-icon">
-                <mat-icon class="purple-arrow">arrow_back</mat-icon>
+                <div class="purple-arrow">
+                    <img src="assets/aroovia-icons/Icon feather-arrow-left.svg" alt="">
+                </div>
             </div>
             <div class="title">
                 {{title}}
@@ -15,7 +17,9 @@
             </div>
     
             <div class="filter-icon">
-                <mat-icon class="purple">tune</mat-icon>
+                <div class="purple">
+                    <img src="../../assets/aroovia-icons/Filter.svg" alt="">
+                </div>
             </div>
         </div>
     
