--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,10 @@
+<div class="cont">
+    <app-header-carousel></app-header-carousel>
+<app-searchcards></app-searchcards>
+</div>
+
 <app-filter></app-filter>
 <app-categories></app-categories>
-
 <app-deals></app-deals>
 <app-recomended></app-recomended>
 <app-close-destinations></app-close-destinations>
