--- a/src/app/recomended/recomended.component.html
+++ b/src/app/recomended/recomended.component.html
@@ -16,7 +16,9 @@
             </div>
     
             <div class="filter-icon">
-                <mat-icon class="purple">tune</mat-icon>
+                <div class="purple">
+                    <img src="assets/aroovia-icons/Filter.svg" class="filter-img" alt="">
+                </div>
             </div>
         </div>
     
