--- a/src/app/might-like/might-like.component.html
+++ b/src/app/might-like/might-like.component.html
@@ -15,7 +15,9 @@
             </div>
     
             <div class="filter-icon">
-                <mat-icon class="purple">tune</mat-icon>
+                <div class="purple">
+                    <img src="../../assets/aroovia-icons/Filter.svg" alt="">
+                </div>
             </div>
         </div>
     
