--- a/src/app/recomended/recomended.component.css
+++ b/src/app/recomended/recomended.component.css
@@ -11,11 +11,20 @@
 }
 .title{
     font-size: 24.75px;
-    font-weight: 900;
+   
+    font-family: 'black';
 }
 .filter-title{
-    font-weight: 900;
+   
+    color: #7600FF;
+    font-family: 'black';
+    font-size: 15.75px;
 }
 .just{
     justify-content: space-between;
+   
+}
+.filter-img{
+    width: 22px;
+    height: 20px;
 }
