--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,8 +1,14 @@
 <div class="cont">
-    <div>
-        <p class="title"> {{downloadTitle}}</p>
+    <div class="center">
+        <img src="assets/aroovia-icons/Group 676.svg" alt="" class="download-img">
+        <div class="text">
+            <p class="title"> {{downloadTitle}}</p>
+            <p class="subtitle">{{downloadSubTitle}}</p>
+        </div>
+        <div>
+            <img src="assets/aroovia-icons/Group 105.svg" alt="">
+            <img src="assets/aroovia-icons/Group 107.svg" alt="">
+        </div>
     </div>
-    <div>
-        
-    </div>
+
 </div>
