--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -1,10 +1,13 @@
 
-<owl-carousel-o [options]="customOptions">
+<div class="container">
+  <owl-carousel-o [options]="customOptions">
 
-  <ng-container *ngFor="let slide of slidesStore">
-    <ng-template carouselSlide class=" img-container">
-      <img class="img" [src]="slide.src" [alt]="slide.alt" >
-    </ng-template>
-  </ng-container>
-
-</owl-carousel-o>
+    <ng-container *ngFor="let slide of slidesStore">
+      <ng-template carouselSlide class=" img-container">
+        <img class="img" [src]="slide.src" [alt]="slide.alt" >
+      </ng-template>
+    </ng-container>
+  
+  </owl-carousel-o>
+  
+</div>
