--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
 
 <router-outlet>
     
-</router-outlet>
-<!-- <app-home></app-home> -->
-
 <app-navbar></app-navbar>
+</router-outlet>
+
+<app-footer></app-footer>
+
+<!-- 
+<app-datepicker></app-datepicker> -->
+<!-- <app-signin></app-signin> -->
