--- a/src/styles.css
+++ b/src/styles.css
@@ -1,106 +1,1 @@
-/* @import "ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"; */
-/* @import "ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css"; */
-html,
-body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-
-}
-
-.flex {
-    display: flex;
-    align-items: center;
-}
-
-.purple {
-    color: #7600FF;
-}
-
-/*  */
-
-app-recomended app-card .card-container {
-    flex-wrap: nowrap !important;
-    overflow-x: auto;
-}
-
-app-footer app-category-item .category-container {
-
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
-
-app-deals .owl-item {
-    width: 460px;
-    height: 204px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-app-deals .owl-dots span {
-    /* width: 12px; */
-    /* height: 12px; */
-    font-size: 12px;
-    border: 2px solid #D9D9D9 !important;
-}
-
-app-deals .owl-dots.active span {
-    /* width: 12px; */
-    /* height: 12px; */
-    font-size: 12px;
-    border: 2px solid white !important;
-}
-
-@font-face {
-    font-family: 'medium';
-    src: url(assets/fonts/AvenirArabic-Medium.otf);
-}
-
-@font-face {
-    font-family: 'light';
-    src: url(assets/fonts/AvenirArabic-Light.otf);
-}
-
-@font-face {
-    font-family: 'heavy';
-    src: url(assets/fonts/AvenirArabic-Heavy.otf);
-}
-
-@font-face {
-    font-family: 'black';
-    src: url(assets/fonts/AvenirArabic-Black.otf);
-}
-
-@font-face {
-    font-family: 'book';
-    src: url(assets/fonts/AvenirArabic-Book.otf);
-}
-
-
-app-header-carousel .owl-dot.active span{
-    border:0.5px solid black;
-    background-color: white !important;
-    width: 12px;
-    height: 12px;
-
-}
-
-app-header-carousel .owl-dot span{
-    border:0.5px solid black;
-    background-color: black !important;
-    width: 12px;
-    height: 12px;
-}
-
-app-header-carousel .owl-dots{
-
-    position: absolute;
-    top: 70%;
-    right: 50%;
-    transform: translate(50%,-50%);
-}
-.pointer{
-    cursor: pointer;
-}
+@import url(external-styles.css);
