--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 
 
-<router-outlet>
+<!-- <router-outlet>
     
 <app-navbar></app-navbar>
 </router-outlet>
 
 <app-footer></app-footer>
 
-<!-- 
-<app-datepicker></app-datepicker> -->
-<!-- <app-signin></app-signin> -->
+
+
+<app-signin></app-signin> -->
+
