--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -3,8 +3,11 @@
   <owl-carousel-o [options]="customOptions">
 
     <ng-container *ngFor="let slide of slidesStore">
-      <ng-template carouselSlide class=" img-container">
-        <img class="img" [src]="slide.src" [alt]="slide.alt" >
+      <ng-template carouselSlide >
+        <div class="img-container">
+          <img class="img" [src]="slide.src">
+        </div>
+       
       </ng-template>
     </ng-container>
   
