--- a/src/external-styles.css
+++ b/src/external-styles.css
@@ -32,8 +32,8 @@ app-footer app-category-item .category-container {
 }
 
 app-deals .owl-item {
-    width: 460px;
-    height: 204px;
+    width: 460px !important;
+    height: 204px !important;;
     padding-left: 20px;
     padding-right: 20px;
 }
